--- a/src/app/parent/navigator/navigator.component.html
+++ b/src/app/parent/navigator/navigator.component.html
@@ -32,10 +32,10 @@
         <button (click)="change()" class="btn btn-sm button">I/VIII</button>
       </div>
       <div>
-        <button [hidden]="button3" class="btn btn-sm button">I/VIV</button>
+        <button class="btn btn-sm button">I/VIV</button>
       </div>
       <div>
-        <button [hidden]="button4" class="btn btn-sm button">V</button>
+        <button class="btn btn-sm button">V</button>
       </div>
     </div>
     <p class="line"></p>
